--- a/web/sass/modules/_quiz.scss
+++ b/web/sass/modules/_quiz.scss
@@ -67,40 +67,44 @@
 
   &--selection {
     margin: 1em auto;
-    min-height: 2.90em;
+    height: 2.9em;
+    padding: .5em 1em;
     position: relative;
     width: 70%;
 
-    background-color:rgba(0,0,0,0.35);
+    background-color: rgba(0,0,0,0.35);
     border: 0.3em solid white;
     font-size: 0.8em;
 
     @include breakpoint($breakpoint-lap) {
-      width: 50%;
+      width: 30em;
+    }
+
+    &.is-checked {
+      @include background-image(linear-gradient(left, $theme-color, rgba(0,0,0,0.35)));
+
+      .quiz--selection-number {
+        background-color: $theme-color;
+      }
     }
   }
 
 
   &--selection-input {
     display: none;
-
-    &:checked ~ .quiz--selection-label {
-      @include background-image(linear-gradient(left, $theme-color, rgba(0,0,0,0.35)));
-    }
-
-    &:checked ~ .quiz--selection-number {
-      background-color: $theme-color;
-    }
   }
 
 
   &--selection-label {
+    position: relative;
+    top: 50%;
+
     margin: 0;
-    min-height: 1.9em;
-    padding: .5em 1.5em .5em;
 
     color: $white;
     word-wrap: break-word;
+
+    @include translateY(-50%);
 
     &:hover {
       cursor: pointer;
@@ -109,7 +113,7 @@
 
 
   &--selection-number {
-    height:1.5em;
+    height: 1.5em;
     left: -1.1em;
     line-height: 1.5em;
     position: absolute;
@@ -118,8 +122,6 @@
 
     background: black;
     border: .2em solid $white;
-    text-indent: -2px;
-
 
     @include border-radius(100%);
     @include translateY(-50%);
@@ -129,27 +131,13 @@
   &--button {
     @extend %button-transparent;
 
-    margin: 0 .2em .2em .2em;
-    padding: .1em 1.5em;
-
-    background-color:rgba(0,0,0,0.35);
-    color: #fff;
-    font-size: 1.25em;
+    color: $white;
+    font-size: 1.695em;
 
     &.is-inactive {
       cursor: default;
 
-      &:hover {
-        background-color:rgba(0,0,0,0.35);
-
-      }
-
       @include opacity(.5);
-    }
-
-
-    &:focus {
-      outline: none
     }
   }
 
